fix broken style

--- a/app/assets/less/base/_reset.less
+++ b/app/assets/less/base/_reset.less
@@ -105,12 +105,17 @@ label {
 .form-control {
 	border-width: 2px;
 	padding: 6px 15px;
+
 	&:focus {
-		color: black;
+		color: #949ca1;
 		outline: none;
 		box-shadow: none;
 		border-color: #00afef;
 		.placeholder(#949ca1);
+	}
+
+	&[readonly] {
+		background: #fff;
 	}
 
 	&:hover {
