--- a/app/assets/less/layout/_header.less
+++ b/app/assets/less/layout/_header.less
@@ -7,6 +7,8 @@
 	position: fixed;
 	min-width: 970px;
 	padding: 0 0 0 261px;
+	//box-shadow: 0 -1px 2px -1px rgba(0,0,0, 0.3);
+
 	.container-fluid {
 		padding: 0;
 		background: #00afef;
@@ -65,7 +67,7 @@
 		border-radius: 100%;
 	}
 
-	.icomoon-envelop {
+	.icon-envelop {
 		top: -3px;
 		font-size: 16px;
 		position: relative;
@@ -77,7 +79,7 @@
 	position: relative;
 	margin: 0;
 
-	.icomoon-bell {
+	.icon-bell {
 		&:before { content: "\e91c"; }
 	}
 
@@ -90,7 +92,7 @@
 		display: none;
 	}
 
-	.icomoon-envelop {
+	.icon-envelop {
 		top: 6px;
 		font-size: 32px;
 		position: relative;
@@ -269,7 +271,7 @@
 		.align(@align: middle);
 	}
 
-	.icomoon-credit {
+	.icon-credit {
 		color: #fff;
 		.font(20px, 30px);
 		padding: 5px 10px 0 6px;
@@ -411,7 +413,7 @@
 			margin-left: 2px;
 		}
 
-		.icomoon-credit {
+		.icon-credit {
 			padding: 5px 3px 0 0;
 		}
 	}
@@ -434,4 +436,23 @@
 			}
 		}
 	}
+
+	/*
+	.logged-user-area {
+		font-size: 16px;
+
+		.opener {
+			padding: 12px 10px 16px;
+
+			.caret {
+				margin-left: 5px;
+			}
+		}
+
+		.img-circle {
+			margin: 0 5px 0 0;
+		}
+	}
+	*/
+
 }
