--- a/app/assets/less/layout/_sidebar.less
+++ b/app/assets/less/layout/_sidebar.less
@@ -43,7 +43,7 @@
 		position: relative;
 		padding: 5px 5px 5px 60px;
 	
-		> [class^="icomoon-"], > [class*=" icomoon-"] {
+		> [class^="icon-"], > [class*=" icon-"] {
 			top: 50%;
 			left: 0;
 			width: 60px;
@@ -54,55 +54,55 @@
 			.transform(translate(0,-50%));
 		}
 		
-		.icomoon-icon_house_alt {
+		.icon-icon_house_alt {
 			color: #3cf;
 		}
 		
-		.icomoon-screen {
+		.icon-screen {
 			font-size: 20px;
 			text-indent: 12px;
 			color: #99cc66;
 		}
 		
-		.icomoon-irb {
+		.icon-irb {
 			color: #c00;
 			font-size: 19px;
 			text-indent: 15px;
 		}
 		
-		.icomoon-doller {
+		.icon-doller {
 			color: #f0f;
 			font-size: 28px;
 			text-indent: 13px;
 		}
 		
-		.icomoon-signout {
+		.icon-signout {
 			color: #0c9;
 			font-size: 24px;
 			text-indent: 15px;
 		}
 		
-		.icomoon-icon_calendar {
+		.icon-icon_calendar {
 			color: #f60;
 			text-indent: 16px
 		}
 		
-		.icomoon-icon_group {
+		.icon-icon_group {
 			color: #c06;
 			text-indent: 17px;
 		}
 		
-		.icomoon-icon_contacts {
+		.icon-icon_contacts {
 			color: #63c;
 			text-indent: 16px;
 		}
 		
-		.icomoon-gift {
+		.icon-gift {
 			color: #f33;
 			text-indent: 14px;
 		}
 		
-		.icomoon-star {
+		.icon-star {
 			color: #ffe11a;
 			text-indent: 15px;
 		}
@@ -113,7 +113,7 @@
 		color: #fff;
 		background: #a0cf67;
 		
-		> [class^="icomoon-"], > [class*=" icomoon-"] {
+		> [class^="icon-"], > [class*=" icon-"] {
 			color: #fff !important;
 		}
 	}
